# project-scrumit

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
analysis/: map.py  utils.py
analysis/cleaning/: accounts_clean.ipynb  aml_clean.ipynb  aml_features.ipynb  aml_viz.ipynb  bank_mapping.ipynb  data_cleaning copy.ipynb  explore.ipynb  merging_preperation.ipynb  trans_cleaning.ipynb  visualization.py
analysis/models/: QDA_math_verification.ipynb  QDA_model.ipynb  QDA_recall_comparison.ipynb  custom_qda_model_for_flask.pkl  feature_importance.py  feature_importance_results.pkl  retrain_qda_artifact.py
analysis/src/: utils.py
analysis/visuals/: aml_viz.py  utils.py
app/: .env.example  __init__.py  config.py  run.py  utils.py
app/routes/: api.py  dashboard.py  map.py  ml.py
app/services/: __init__.py  custom_qda.py  feature_service.py  imputation_service.py  prediction_service.py
app/static/charts/: amount_bucket_chart.json  currency_laundering_rate_chart.json  currency_volume_chart.json  daily_rate_chart.json  domestic_vs_crossborder_chart.json  hourly_chart.json  overview.json  volume_chart.json  (+5 more)
app/templates/: about_data.html  base.html  dashboard.html  index.html  map.html  meet_the_team.html  ml.html  model-explanation.html
src/: aml_viz.py  charts.py  cleaning.py  cleaning_visualization.py  cleaning_visualizations.py  utils.py  visualizations.py
tests/: __init__.py  conftest.py  test_charts.py  test_cleaning.py  test_model_artifact.py  test_model_feature_importance.py  test_model_integration.py  test_model_retrain_pipeline.py  test_routes.py  test_utils.py
(+2 files in other folders)
