[project]
name = "project-scrumit-t1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "geopy>=2.4.1",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.0",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
