[project]
name = "project-scrumit-t1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "geopy>=2.4.1",
    "imblearn>=0.0",
    "joblib>=1.4.2,<1.5",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "pycaret",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
pycaret = { git = "https://github.com/pycaret/pycaret.git", rev = "master" }
