[project]
name = "project-scrumit-t1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask>=3.1.3",
    "geopy>=2.4.1",
    "imblearn>=0.0",
    "joblib>=1.4.2,<1.5",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.7.0,<3.8.0",
    "pandas>=2.0,<2.2",
    "pathlib>=1.0.1",
    "plotly>=6.7.0",
    "pycaret",
    "requests>=2.32.5",
    "scikit-learn>=1.4,<1.9",
    "scipy>=1.6.1,<=1.11.4",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
pycaret = { git = "https://github.com/pycaret/pycaret.git", rev = "master" }
